--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,9 @@
         <hr class="short" />
         <h4 id="author"></h4>
       </div>
+      <a id="add-entry-btn">
+        Add Entry
+      </a>
       <div class="arrow">
         <i class="angle down icon"></i>
       </div>
