--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,6 +18,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script type="text/javascript" src="/assets/javascript/modalLogic.js"></script>
 
 </body>
 </html>
