--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -1,39 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <!-- STANDARD META -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
+<%- include('partials/header') -%>
 
-    <!-- SITE PROPERTIES -->
-    <title>Moodsphere - Log In</title>
-
-    <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="type/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/themes/material/assets/fonts/icons.woff"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-
-    <!-- CUSTOM STYLESHEET -->
-    <link rel="stylesheet" type="text/css" href="assets/css/log-in.css" />
-  </head>
-</html>
-
-<body>
   <div class="site">
   <!-- LOG IN / SIGN UP FORM -->
   <div class="site-content content">
