--- a/views/partials/add-entry.ejs
+++ b/views/partials/add-entry.ejs
@@ -60,54 +60,61 @@
     <hr />
     <!-- QUESTION ANSWERS -->
     <div id="question-answers">
-      <p id="questionA" class="question"></p>
-      <button
-        id="answer-1A"
-        class="answer-opt-1"
-        data-text="I feel hopeless all the time."
-      ></button>
-      <button
-        id="answer-2A"
-        class="answer-opt-1"
-        data-text="I feel hopeless sometimes."
-      ></button>
-      <button
-        id="answer-3A"
-        class="answer-opt-1"
-        data-text="I feel hopeful."
-      ></button>
-      <p id="questionB" class="question"></p>
-      <button
-        id="answer-1B"
-        class="answer-opt-2"
-        data-text="I have trouble falling asleep."
-      ></button>
-      <button
-        id="answer-2B"
-        class="answer-opt-2"
-        data-text="I keep waking up at night."
-      ></button>
-      <button
-        id="answer-3B"
-        class="answer-opt-2"
-        data-text="My sleeping habits are normal."
-      ></button>
-      <p id="questionC" class="question"></p>
-      <button
-        id="answer-1C"
-        class="answer-opt-3"
-        data-text="I am productive."
-      ></button>
-      <button
-        id="answer-2C"
-        class="answer-opt-3"
-        data-text="I only complete necessary tasks."
-      ></button>
-      <button
-        id="answer-3C"
-        class="answer-opt-3"
-        data-text="I have trouble leaving the house."
-      ></button>
+        <div class="eight wide column">
+          <p id="questionA" class="question"></p>
+          <button
+            id="answer-1A"
+            class="answer-opt-1"
+            data-text="I feel hopeless all the time."
+          ></button>
+          <button
+            id="answer-2A"
+            class="answer-opt-1"
+            data-text="I feel hopeless sometimes."
+          ></button>
+          <button
+            id="answer-3A"
+            class="answer-opt-1"
+            data-text="I feel hopeful."
+          ></button>
+        </div>
+        <div class="eight wide column">
+          <p id="questionB" class="question"></p>
+          <button
+            id="answer-1B"
+            class="answer-opt-2"
+            data-text="I have trouble falling asleep."
+          ></button>
+          <button
+            id="answer-2B"
+            class="answer-opt-2"
+            data-text="I keep waking up at night."
+          ></button>
+          <button
+            id="answer-3B"
+            class="answer-opt-2"
+            data-text="My sleeping habits are normal."
+          ></button>
+        </div>
+        <div class="eight wide column">
+          <p id="questionC" class="question"></p>
+          <button
+            id="answer-1C"
+            class="answer-opt-3"
+            data-text="I am productive."
+          ></button>
+          <button
+            id="answer-2C"
+            class="answer-opt-3"
+            data-text="I only complete necessary tasks."
+          ></button>
+          <button
+            id="answer-3C"
+            class="answer-opt-3"
+            data-text="I have trouble leaving the house."
+          ></button>
+        </div>
+      </div>
     </div>
 
     <hr />
