--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,14 +10,12 @@
     <div class="ui center aligned container copyright">® 2019</div>
 </div>
 
-<!-- FIREBASE -->
-<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-
 <!-- JAVASCRIPT, JQUERY -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script type="text/javascript" src="/assets/javascript/app.js"></script>
 <script type="text/javascript" src="/assets/javascript/modalLogic.js"></script>
 
 </body>
