--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,8 @@
     <div class="jumbotron">
       <!-- MAIN CONTENT -->
       <div class="header-container">
-        <div id="weather">
-          <img id='weather-icon' alt='Weather Sacramento, US'>
+        <div class="weather">
+          <img id='weather-icon'>
           <p id='temp'></p>
         </div>
         <h1 class="ui header welcome">Welcome <%= currentUser %>! <br>
