--- a/views/newentry.ejs
+++ b/views/newentry.ejs
@@ -64,7 +64,7 @@
     <!-- QUESTION ANSWERS -->
     <div id="question-answers">
         <div class="eight wide column">
-          <p id="questionA" class="question">Do you feel hopeless?</p>
+          <div id="questionA" class="question">Do you feel hopeless?</div>
           <button
             id="answer-1A"
             class="answer-opt-1"
@@ -82,7 +82,7 @@
           >No.</button>
         </div>
         <div class="eight wide column">
-          <p id="questionB" class="question">Are you getting less sleep than usual?</p>
+          <div id="questionB" class="question">Are you getting less sleep than usual?</div>
           <button
             id="answer-1B"
             class="answer-opt-2"
@@ -100,7 +100,7 @@
           >No, I haven't noticed any differences.</button>
         </div>
         <div class="eight wide column">
-          <p id="questionC" class="question">Have you been productive today?</p>
+          <div id="questionC" class="question">Have you been productive today?</div>
           <button
             id="answer-1C"
             class="answer-opt-3"
