--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -15,7 +15,7 @@
             <td>Comments</td>
           </tr>
         </thead>
-        <tbody><% </tbody>
+        <tbody><% %></tbody>
       </table>
     </div>
   </main>
