--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,17 +11,17 @@
 
     <!-- SITE PROPERTIES -->
     <% if (title === 'Home') { %>
-    <title>Moodsphere - Home</title>
+    <title>Moodsphere | Home</title>
     <% } else if (title === 'Overview') { %>
-    <title>Moodsphere - Overview</title>
+    <title>Moodsphere | Overview</title>
     <% } else if (title === 'Discover') { %>
-    <title>Moodsphere - Discover</title>
+    <title>Moodsphere | Discover</title>
     <% } else if (title === 'LogIn') { %>
-    <title>Moodsphere - Log In</title>
+    <title>Moodsphere | Log In</title>
     <% } else if (title === 'SignUp') { %>
-    <title>Moodsphere - Sign Up</title>
+    <title>Moodsphere | Sign Up</title>
     <% } else if (title === 'Entry') { %>
-    <title>Moodsphere - Entry</title>
+    <title>Moodsphere | Entry</title>
     <% } else { %>
     <title>Moodsphere</title>
     <% } %>
