--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,13 @@
 <!-- NAVIGATION -->
-<div class="ui sticky secondary pointing menu">
-    <img
-      class="app-logo"
-      src="assets/images/moodsphere.svg"
-      alt="Moodsphere Logo"
-    />
-    <p class="ui header item app-name">Moodsphere</p>
+<div class="ui big sticky secondary pointing menu">
+    <div class="header item">
+      <img
+        class="app-logo"
+        src="assets/images/moodsphere.svg"
+        alt="Moodsphere Logo"
+      />
+      <span class="ui header item app-name">Moodsphere</span>
+    </div>
     <div class="right menu">
       <a class="item" href="/home">
         Home
