--- a/views/newentry.ejs
+++ b/views/newentry.ejs
@@ -13,7 +13,7 @@
             class="mood"
             data-mood="depressed"
             data-color="#5C8B93"
-            value="1"
+            value=1
           ></button>
           <p class="mood-text">depressed</p>
         </div>
@@ -23,7 +23,7 @@
             class="mood"
             data-mood="sad"
             data-color="#76B3BE"
-            value="2"
+            value=2
           ></button>
           <p class="mood-text">sad</p>
         </div>
@@ -33,7 +33,7 @@
             class="mood"
             data-mood="moderate"
             data-color="#8FDAE7"
-            value="3"
+            value=3
           ></button>
           <p class="mood-text">moderate</p>
         </div>
@@ -43,7 +43,7 @@
             class="mood"
             data-mood="happy"
             data-color="#A3E0EB"
-            value="4"
+            value=4
           ></button>
           <p class="mood-text">happy</p>
         </div>
@@ -53,7 +53,7 @@
             class="mood"
             data-mood="exhilirated"
             data-color="#C1EAF1"
-            value="5"
+            value=5
           ></button>
           <p class="mood-text">exhilirated</p>
         </div>
@@ -69,16 +69,19 @@
             id="answer-1A"
             class="answer-opt-1"
             data-text="I feel hopeless all the time."
+            value=1
           >Yes, all the time.</button>
           <button
             id="answer-2A"
             class="answer-opt-1"
             data-text="I feel hopeless sometimes."
+            value=2
           >Yes, sometimes.</button>
           <button
             id="answer-3A"
             class="answer-opt-1"
             data-text="I feel hopeful."
+            value=3
           >No.</button>
         </div>
         <div class="eight wide column">
@@ -87,16 +90,19 @@
             id="answer-1B"
             class="answer-opt-2"
             data-text="I have trouble falling asleep."
+            value=1
           >Yes, I had trouble falling asleep.</button>
           <button
             id="answer-2B"
             class="answer-opt-2"
             data-text="I keep waking up at night."
+            value=2
           >Yes, I kept waking up at night.</button>
           <button
             id="answer-3B"
             class="answer-opt-2"
             data-text="My sleeping habits are normal."
+            value=3
           >No, I haven't noticed any differences.</button>
         </div>
         <div class="eight wide column">
@@ -105,16 +111,19 @@
             id="answer-1C"
             class="answer-opt-3"
             data-text="I am productive."
+            value=1
           >Yes, I have kept myself busy.</button>
           <button
             id="answer-2C"
             class="answer-opt-3"
             data-text="I only complete necessary tasks."
+            value=2
           >I only completed important tasks.</button>
           <button
             id="answer-3C"
             class="answer-opt-3"
             data-text="I have trouble leaving the house."
+            value=3
           >No, I don't feel like leaving the house.</button>
         </div>
       </div>
@@ -136,11 +145,11 @@
             </div> -->
           </div>
           <div class="btn-right">
-            <!-- <form action="/newentry" method="POST"> -->
-              <button method="POST" type="submit" id="continue-btn" class="modal-btn">
+            <form action="/overview" method="POST">
+              <button type="submit" id="continue-btn" class="modal-btn">
                 Continue
               </button>
-            <!-- </form> -->
+            </form>
           </div>
         </div>
       </div>
