--- a/views/newentry.ejs
+++ b/views/newentry.ejs
@@ -12,9 +12,11 @@
             class="mood"
             data-mood="depressed"
             data-color="#5C8B93"
-            value=1
+            value="5C8B93"
           ></button>
-          <p class="mood-text">depressed</p>
+          <p class="mood-text">
+            depressed
+          </p>
         </div>
         <div class="column">
           <button
@@ -22,9 +24,11 @@
             class="mood"
             data-mood="sad"
             data-color="#76B3BE"
-            value=2
+            value="76B3BE"
           ></button>
-          <p class="mood-text">sad</p>
+          <p class="mood-text">
+            sad
+          </p>
         </div>
         <div class="column">
           <button
@@ -32,9 +36,11 @@
             class="mood"
             data-mood="moderate"
             data-color="#8FDAE7"
-            value=3
+            value="8FDAE7"
           ></button>
-          <p class="mood-text">moderate</p>
+          <p class="mood-text">
+            moderate
+          </p>
         </div>
         <div class="column">
           <button
@@ -42,9 +48,11 @@
             class="mood"
             data-mood="happy"
             data-color="#A3E0EB"
-            value=4
+            value="A3E0EB"
           ></button>
-          <p class="mood-text">happy</p>
+          <p class="mood-text">
+            happy
+          </p>
         </div>
         <div class="column">
           <button
@@ -52,9 +60,11 @@
             class="mood"
             data-mood="exhilirated"
             data-color="#C1EAF1"
-            value=5
+            value="C1EAF1"
           ></button>
-          <p class="mood-text">exhilirated</p>
+          <p class="mood-text">
+            exhilirated
+          </p>
         </div>
       </div>
     </div>
@@ -63,67 +73,91 @@
     <!-- QUESTION ANSWERS -->
     <div id="question-answers">
         <div class="eight wide column">
-          <div id="questionA" class="question">Do you feel hopeless?</div>
+          <div id="questionA" class="question">
+            Do you feel hopeless?
+          </div>
           <button
             id="answer-1A"
             class="answer-opt-1"
             data-text="I feel hopeless all the time."
-            value=1
-          >Yes, all the time.</button>
+            value="Yes, all the time."
+          >
+            Yes, all the time.
+          </button>
           <button
             id="answer-2A"
             class="answer-opt-1"
             data-text="I feel hopeless sometimes."
-            value=2
-          >Yes, sometimes.</button>
+            value="Yes, sometimes."
+          >
+            Yes, sometimes.
+          </button>
           <button
             id="answer-3A"
             class="answer-opt-1"
             data-text="I feel hopeful."
-            value=3
-          >No.</button>
+            value="No."
+          >
+            No.
+          </button>
         </div>
         <div class="eight wide column">
-          <div id="questionB" class="question">Are you getting less sleep than usual?</div>
+          <div id="questionB" class="question">
+            Are you getting less sleep than usual?
+          </div>
           <button
             id="answer-1B"
             class="answer-opt-2"
             data-text="I have trouble falling asleep."
-            value=1
-          >Yes, I had trouble falling asleep.</button>
+            value="Yes, I had trouble falling asleep."
+          >
+            Yes, I had trouble falling asleep.
+          </button>
           <button
             id="answer-2B"
             class="answer-opt-2"
             data-text="I keep waking up at night."
-            value=2
-          >Yes, I kept waking up at night.</button>
+            value="Yes, I kept waking up at night."
+          >
+            Yes, I kept waking up at night.
+          </button>
           <button
             id="answer-3B"
             class="answer-opt-2"
             data-text="My sleeping habits are normal."
-            value=3
-          >No, I haven't noticed any differences.</button>
+            value="No, I haven't noticed any differences."
+          >
+            No, I haven't noticed any differences.
+          </button>
         </div>
         <div class="eight wide column">
-          <div id="questionC" class="question">Have you been productive today?</div>
+          <div id="questionC" class="question">
+            Have you been productive today?
+          </div>
           <button
             id="answer-1C"
             class="answer-opt-3"
             data-text="I am productive."
-            value=1
-          >Yes, I have kept myself busy.</button>
+            value="Yes, I have kept myself busy."
+          >
+            Yes, I have kept myself busy.
+          </button>
           <button
             id="answer-2C"
             class="answer-opt-3"
             data-text="I only complete necessary tasks."
-            value=2
-          >I only completed important tasks.</button>
+            value="I only completed important tasks."
+          >
+            I only completed important tasks.
+          </button>
           <button
             id="answer-3C"
             class="answer-opt-3"
             data-text="I have trouble leaving the house."
-            value=3
-          >No, I don't feel like leaving the house.</button>
+            value="No, I don't feel like leaving the house."
+          >
+            No, I don't feel like leaving the house.
+          </button>
         </div>
       </div>
     </div>
