--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -31,6 +31,10 @@
         </tbody>
       </table>
     </div>
+
+    <section>
+      <ul class="graph"></ul>
+    </section>
   </main>
 
 <%- include('partials/footer') -%>
