--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,7 +26,6 @@
       href="https://fonts.googleapis.com/css?family=Fira+Sans:800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
 
     <!-- CUSTOM STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="assets/css/log-in.css" />
@@ -34,9 +33,8 @@
 </html>
 
 <body>
-  <div class="site">
   <!-- LOG IN / SIGN UP FORM -->
-  <div class="site-content content">
+  <div class="auth-form">
     <div class="login-logo-div">
       <img class="login-logo" src="assets/images/moodsphere.svg" alt="Moodsphere Logo">
       <h1 class="login-heading">Moodsphere</h1>
@@ -67,11 +65,15 @@
       <button class="ui fluid large submit button" id="login-btn">Sign Up</button>
     </form>
     <div class="message">
-      Already have an account?
-      <a href="/login" id="signup-btn" class="ui small submit button">Log In</a>
+      <div class="message-item">
+        Already have an account?
+        <a href="/login" id="signup-btn" class="message-link">Log In</a>
+      </div>
+      <div class="message-item">
+        Testing?
+        <span id="test-btn" class="message-link">Use Guest Account</span>
+      </div>
     </div>
   </div>
-
-</div>
 
 <%- include('partials/footer') -%>
