--- a/public/assets/css/log-in.css
+++ b/public/assets/css/log-in.css
@@ -99,6 +99,7 @@
 }
 .message-link {
   color: #f9b38d;
+  cursor: pointer;
   margin-left: 0.5rem;
 }
 .message-link:hover {
@@ -157,8 +158,4 @@ a.item {
   .ui.form {
     width: 500px;
   }
-}
-
-@media only screen and (min-width: 1200px) {
-  
 }
