--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -32,8 +32,9 @@
       </table>
     </div>
 
-    <section>
-      <ul class="graph"></ul>
+    <section class="graph-container">
+      <h3 class="graph-year" id="year"></h3>
+      <div class="graph"></div>
     </section>
   </main>
 
